--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
     <header>
         <h1>
-
+TITULO
         </h1>
     </header>
     <nav>
-        <ul>
             <li></li>
             <li></li>
             <li></li>
